--- a/skin/frontend/pinkys/default/scss/layout/_header.scss
+++ b/skin/frontend/pinkys/default/scss/layout/_header.scss
@@ -134,12 +134,12 @@
  * ============================================ */
 
 .logo {
-    display: block;
-    float: left;
+    //display: block;
+    //float: left;
     width: 65%;
     min-width: 100px;
-    text-align: center;
-    margin-right: 10px;
+    //text-align: center;
+    //margin-right: 10px;
 
     img {
         max-width: 100%;
